<resources>
    <string name="app_name">App</string>
    <string name="title_field">DROID DESSERTS</string>
    <string name="chocolate">This dessert is made of chocolates and white cream.</string>
    <string name="lemon">Lemon cake made with real lemons and a hearty crust.</string>
    <string name="pumpkin">Using pumpkins and cane sugar give this pie a delicious taste.</string>
    <string name="chocolate_order">Your ordered a chocolate dessert.</string>
    <string name="lemon_order">You ordered a lemon cake.</string>
    <string name="pumpkin_order">You ordered a pumpkin pie.</string>
    <string name="back">BACK</string>
    <string name="page_title"><u>ORDER PAGE</u></string>
    <string name="name">Name</string>
    <string name="john_doe">John Doe</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="phone_hint">(310)555-5555</string>
    <string name="note">Note:</string>
    <string name="delivery_method">Choose a delivery method:</string>
    <string name="same_day">Same day messenger service</string>
    <string name="next_day">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="order">Order</string>
    <string name="status">Status</string>
    <string name="favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
</resources>
