<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/order"
        android:icon="@drawable/ic_cart"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/status"
        android:icon="@drawable/ic_dot_circle"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="30"
        android:title="@string/favorites"
        android:icon="@drawable/ic_heart"
        app:showAsAction="never"/>
</menu>