<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/page_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:id="@+id/recieved_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/name_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/recieved_message"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/john_doe"
        android:inputType="textPersonName|text"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/name_tag"
        app:layout_constraintStart_toEndOf="@id/name_tag"
        app:layout_constraintTop_toTopOf="@id/name_tag" />
    <TextView
        android:id="@+id/address_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text"
        android:text="@string/address"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/address_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/address_tag"
        app:layout_constraintTop_toTopOf="@id/address_tag"
        android:ems="10"
        android:gravity="start|top"
        android:maxLines="3"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/phone_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/address_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/phone"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/phone_hint"
        android:inputType="text|phone"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:imeOptions="actionSend"
        app:layout_constraintBottom_toBottomOf="@id/phone_tag"
        app:layout_constraintStart_toEndOf="@id/phone_tag"
        app:layout_constraintTop_toTopOf="@id/phone_tag" />
    <TextView
        android:id="@+id/note_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_tag"
        android:text="@string/note"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/note_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:maxLines="3"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:inputType="textMultiLine|textAutoCorrect"
        app:layout_constraintStart_toEndOf="@id/note_tag"
        app:layout_constraintTop_toTopOf="@id/note_tag" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/radio_group"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/delivery_method"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent" >

        <RadioButton
            android:id="@+id/same_day_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/same_day"
            android:onClick="radioButtonClicked"/>

        <RadioButton
            android:id="@+id/next_day_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_day"
            android:onClick="radioButtonClicked"/>

        <RadioButton
            android:id="@+id/pick_up_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_up"
            android:onClick="radioButtonClicked"/>
    </RadioGroup>
    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"/>




</androidx.constraintlayout.widget.ConstraintLayout>