<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn="@layout/content_main">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/title_field"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        />
    <ImageView
        android:id="@+id/first_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showAlert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_pumpkin_pie_foreground"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/pumpkin"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/first_image"
        app:layout_constraintTop_toTopOf="@id/first_image"
        app:layout_constraintBottom_toBottomOf="@id/first_image"
        android:layout_marginLeft="15dp"/>
    <ImageView
        android:id="@+id/second_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showToast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_image"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_lemon_cake_foreground"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/second_image"
        app:layout_constraintStart_toEndOf="@id/second_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/second_image"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/lemon"
        android:textColor="@color/black"
        android:textSize="20sp"/>
    <ImageView
        android:id="@+id/third_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showToast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_image"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_chocolate_dessert_foreground"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/third_image"
        app:layout_constraintStart_toEndOf="@id/third_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/third_image"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/chocolate"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/snackbar_action"
        android:layout_width="63dp"
        android:layout_height="64dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:layout_editor_absoluteX="321dp"
        tools:layout_editor_absoluteY="648dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>